# TJR103-Group04

./: .gitignore  .~lock.CFP_P_02_data.csv#  Albert_icook_recept_crawler.py  Dockerfile  README.md  README_PowerShell_Docker.md  all_ingredient_names_cleaned_ytower.csv  esg.py  pyproject.toml  scheduler.py  碳足跡係數修正版.csv
airflow/dags/: d_01_etl_icook_recipe_process.py  d_01_get_icook_yesterday_recipe.py  d_06_play_dag_params.py  etl_dump_coemission_dag.py  etl_mysql_warehouse_dag.py  gina_daily_dag.py  ingest_data_dag.py  init_db_dag.py  ytower_ingestion_dag.py  ytower_init_load_dag.py
icook_crawler/: scheduler.py
mongodb/: docker-compose.yml
service/mysql_etl/: airflow.Dockerfile  da_analysis.Dockerfile  docker-compose.yaml  pymysql_01.ipynb
src/albert_icook_crawler/: main.py  scrapy.cfg
src/coemission/: carboncloud_crawler.py
src/cwyeh_coemission/: carboncloud_crawler.py  myemission_crawler.py
src/cwyeh_mysql_etl/: mysql_etl_utils.py  test.py
src/gina_icook_crawler/: daily.py  intex.html
src/kevin_food_unit_normalization/: README.md  clean_local_db.py  main.py  unit_mapping_db.csv  unit_mapping_db_for_upload.csv  unit_normalize.csv  upload_to_mysql.py
src/kevin_initial_data/: clean_ingredient_names_final.py  export_final_report.py  extract_ingredient_names.py  final_upload_unit_normalize.csv  ingredient_normalize_mysql.csv  prepare_final_upload_v2.py  test_mini.csv  transform_recipes.py  upload_final_tables.py  upload_recipes.py
src/kevin_ytower_crawler/: README.md  main.py  scrapy.cfg  ytower_cooking_crawler.py  ytower_recipes.csv
(+861 files in other folders)
