[tool.poetry]
name = "recipe_carbon_emission"
version = "0.1.0"
description = "食譜碳排計算器"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
pytz = "^2024.1"
lxml = "^5.2.1"
scrapy = "^2.13.3"
pathlib = "^1.0.1"
confluent-kafka = "^2.12.2"
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
